# ai_shop

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
people_monitor/: __init__.py  __main__.py  app.py  cli.py
people_monitor/config/: __init__.py  _base.py  app.py  camera.py  enums.py  event.py  model.py  notifications.py  output.py  roi.py  runtime.py  visualization.py
people_monitor/detection/: __init__.py  base.py  ultralytics_tracker.py
people_monitor/domain/: __init__.py  enums.py  models.py  types.py
people_monitor/events/: __init__.py  exit_monitor.py  occupancy_monitor.py
people_monitor/geometry/: __init__.py  roi.py
people_monitor/notifications/: __init__.py  base.py  logging_notifier.py  telegram.py  worker.py
people_monitor/pipeline/: __init__.py  video.py
people_monitor/storage/: __init__.py  base.py  jsonl.py
people_monitor/video/: __init__.py  base.py  opencv_source.py  screen_source.py
people_monitor/visualization/: __init__.py  overlay.py  renderer.py
tests/: __init__.py  factories.py  test_exit_monitor.py  test_notification_worker.py  test_opencv_source.py  test_overlay.py  test_queue_occupancy_monitor.py  test_roi.py  test_screen_source.py  test_settings.py  test_telegram.py
