[project]
name = "ai-shop"
version = "0.1.0"
description = "People bbox exit monitoring for configurable video ROI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.3.0",
]

# По умолчанию PyPI может выбрать CUDA-сборку torch для Linux. Для этой задачи
# достаточно CPU, поэтому явно используем компактную CPU-сборку PyTorch.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
